generating webserver certs

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 dhparams_size=1024
 rsa_key_size=4096
+web_rsa_size=2048
+
+requested_days=365
 
 countryName=RU
 stateName=Moscow State
@@ -8,4 +11,6 @@ organizationName=LLC XSoft
 organizationalUnitName=XSoft WebApps Department
 commonName=XSoft Certification Authority
 
-requested_days=365
+wildcard=*.xsoft.test
+subdomain=flask.xsoft.test
+addip=127.0.0.1
