configurating ssl in nginx

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,10 @@ networks:
 
 services:
 
-  init-dhparams:
+  init-dhparam:
     build: ./containers/cert-manager
     restart: 'no'
-    command: -c 'openssl dhparam -out dhparams.pem ${dhparams_size}'
+    command: -c 'openssl dhparam -out dhparam.pem ${dhparam_size}'
     volumes:
       - certs:/openssl-certs:Z
 
@@ -25,7 +25,7 @@ services:
           openssl req -new -keyout webserver.key -out webserver.csr -nodes -config webserver_req.conf &&
           openssl req -text -noout -in webserver.csr &&
           yes | openssl ca -in webserver.csr -out webserver.crt -config ca.conf &&
-          cp webserver.crt /openssl-certs'
+          cp webserver.crt /openssl-certs && cp webserver.key /openssl-certs'
     configs:
       - source: ca-req
         target: /pki/ca_req.conf
@@ -36,27 +36,37 @@ services:
     volumes:
       - certs:/openssl-certs:Z
 
-  # nginx:
-  #   image: nginx
-  #   volumes:
-  #     - ./containers/nginx/nginx.conf:/etc/nginx/nginx.conf
-  #   networks: 
-  #     - default
-  #     - internal
-  #   ports:
-  #     - 80:80
+  nginx:
+    image: nginx
+    networks: 
+      - default
+      - internal
+    ports:
+      - 80:80
+      #- 443:443
+    depends_on:
+      init-dhparam:
+        condition: service_completed_successfully
+        required: true
+      certs-oneshot:
+        condition: service_completed_successfully
+        required: true
+    volumes:
+      - ./containers/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./containers/nginx/ssl_params:/etc/nginx/ssl_params
+      - certs:/etc/nginx/ssl:Z
 
-  # flask_app:
-  #   build: ./containers/flask
-  #   expose:
-  #     - 5000
-  #   command: gunicorn --bind 0.0.0.0:5000 wsgi:app
-  #   deploy:
-  #     replicas: 3
-  #   networks:
-  #     internal:
-  #       aliases:
-  #         - flask
+  flask_app:
+    build: ./containers/flask
+    expose:
+      - 5000
+    command: gunicorn --bind 0.0.0.0:5000 wsgi:app
+    deploy:
+      replicas: 3
+    networks:
+      internal:
+        aliases:
+          - flask
 
 volumes:
   certs:
