adding default conf to nginx

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,7 +52,7 @@ services:
         condition: service_completed_successfully
         required: true
     volumes:
-      - ./containers/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./containers/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./containers/nginx/ssl_params:/etc/nginx/ssl_params
       - certs:/etc/nginx/ssl:Z
 
