--- a/containers/nginx/default.conf
+++ b/containers/nginx/default.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name _;
 
     resolver 127.0.0.11 valid=30s;
     resolver_timeout 5s;
@@ -7,6 +8,25 @@ server {
     set $alias "flask";
 
     location / {
+        proxy_pass  http://$alias:5000;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name _;
+    include /etc/nginx/ssl_params;
+
+    resolver 127.0.0.11 valid=30s;
+    resolver_timeout 5s;
+
+    set $alias "flask";
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
         proxy_pass  http://$alias:5000;
     }
 }
